# ARR

./: .env.example  GUIDE.md  GUIDE_KG.md  README.md  creation.py  pyproject.toml  run.py
backend/: config.py  main.py
backend/db/: models.py  session.py  sync.py
backend/routers/: config.py  graph.py  papers.py  runs.py
backend/runs/: manager.py  service.py  trace_view.py
data/output/: app.db  soil_kg.html  soil_kg.json
data/output/traces/: soil1.txt.jsonl
data/papers/: soil1.txt
frontend/: package-lock.json
frontend/src/: App.tsx  RunContext.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConfigForm.tsx  EntityTable.tsx  FileDropzone.tsx  FindingTable.tsx  ProgressBar.tsx
frontend/src/pages/: GraphExplorer.tsx  RunHistory.tsx  RunMonitor.tsx  Upload.tsx
kg_building/agents/: critic.py  orchestrator.py  planner.py  session.py  tools.py  worker.py
kg_building/chunking/: chunker.py
kg_building/eval/: check.py
kg_building/extraction/: types.py
kg_building/graph/: dedup.py  storage.py
kg_building/ingestion/: loader.py
kg_building/llm/: client.py
kg_building/utils/: logging_config.py  replay_trace.py  trace.py
kg_building/visualization/: visualizer.py
