[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "soil-kg-agentic"
version = "0.1.0"
description = "Agentic soil-health causal knowledge graph builder (planner + tool-using worker + critic)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "networkx>=3.3",
    "sentence-transformers>=3.0.0",
    "pyvis>=0.3.2",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "json-repair>=0.1.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kg_building*", "backend*"]
